added dbContext and initial db-migration - created database'

--- a/XFin.API.DAL/XFin.API.DAL.csproj
+++ b/XFin.API.DAL/XFin.API.DAL.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\XFin.API.Core\XFin.API.Core.csproj" />
+  </ItemGroup>
+
 </Project>
