--- a/XFin.API/appsettings.json
+++ b/XFin.API/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "XFinDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=XFinDb;Integrated Security=True;"
+    "XFinDb": "server=localhost;user=admin;password=admin;database=xfin"
   }
 }
