--- a/XFin.API.DAL/XFin.API.DAL.csproj
+++ b/XFin.API.DAL/XFin.API.DAL.csproj
@@ -13,10 +13,16 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.3" />
+    <PackageReference Include="MySql.Data" Version="8.0.26" />
+    <PackageReference Include="MySql.EntityFrameworkCore" Version="5.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\XFin.API.Core\XFin.API.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="MySql.Data" />
+    <None Remove="MySql.EntityFrameworkCore" />
+  </ItemGroup>
 </Project>
